--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
       </section>
     </template>
 
+    <script src="/vendor/nouislider/nouislider.js" defer></script>
     <script src="/vendor/pristine/pristine.min.js" defer></script>
     <script src="/js/main.js" type="module" defer></script>
 </body>
