--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/vendor/nouislider/nouislider.css">
   <title>Кекстаграм</title>
 </head>
 
@@ -30,6 +31,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
+          <form class="img-upload__form" id="upload-select-image" method="post" action="https://32.javascript.htmlacademy.pro/kekstagram" enctype="multipart/form-data" autocomplete="off">
           <form class="img-upload__form" id="upload-select-image" method="post" action="https://32.javascript.htmlacademy.pro/kekstagram" enctype="multipart/form-data" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
@@ -234,7 +236,8 @@
       </section>
     </template>
 
-    <script src="/vendor/pristine/pristine.min.js" defer></script>
-    <script src="/js/main.js" type="module" defer></script>
+    <script src="./vendor/nouislider/nouislider.js"></script>
+    <script src="./vendor/pristine/pristine.min.js"></script>
+    <script src="./js/main.js" type="module" defer></script>
 </body>
 </html>
